<resources>
    <string name="app_name">Tap scrolling</string>
    <string name="avatar_text">Аватарка</string>
    <string name="like_text">Лайк</string>
    <string name="comments_text">Комментарии</string>
    <string name="share_text">Поделиться</string>
    <string name="register_text">Регистрация</string>
    <string name="google_text">Продолжить с Google</string>
    <string name="phone_register_text">Регистрация по телефону</string>
    <string name="vk_text">Продолжить через ВК</string>
    <string name="email_register_text">Регистрация по почте</string>
    <string name="email_enter_text">Введите свой email</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password_text">Придумайте пароль</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="continue_text">Продолжить</string>
    <string name="authorize_text">Авторизация</string>
    <string name="avatar_upload_text">Загрузить аватарку</string>
    <string name="phone_text">Введите номер телефона</string>
    <string name="record_video_text">Запись видео</string>
</resources>